harbour porpoise Dryad explanation and data re-write/simplification.

--- a/dsmixtures.bib
+++ b/dsmixtures.bib
@@ -475,3 +475,15 @@ month = mar
 }
 
 
+@article{Otto:1990kk,
+author = {Otto, Mark C and Pollock, Kenneth H},
+title = {{Size Bias in Line Transect Sampling: A Field Test}},
+journal = {Biometrics},
+year = {1990},
+volume = {46},
+number = {1},
+pages = {239--245},
+month = mar
+}
+
+
