--- a/dsmixtures.tex
+++ b/dsmixtures.tex
@@ -76,7 +76,7 @@ We present a new class of models for the detection function in distance sampling
 
 \section*{Introduction}
 
-Distance sampling \cite{Buckland:2001vm,Buckland:2004ts} is a suite of methods for estimating the size or density of biological populations.  There are two main variants: line and point transects. In both, an observer visits a randomly-located set of transect lines or points and records the distance, $y$, from the transect to each object of interest (i.e., animals or plants of the target species) that is detected within some truncation distance $w$ (usually chosen after the survey has taken place \cite{Buckland:2001vm}).  Not all objects within $w$ are assumed to be detected; instead the observed distances are used to estimate the parameter vector, $\boldsymbol{\theta}$, of a detection function model, $g(y;\boldsymbol{\theta})$, which describes how the probability of detection declines with increasing distance.  An assumption of the conventional method is that $g(0;\boldsymbol{\theta})=1$. Given an estimate of $\boldsymbol{\theta}$, it is straightforward to estimate population size or density (see below).
+Distance sampling \cite{Buckland:2001vm,Buckland:2004ts} is a suite of methods for estimating the size or density of biological populations.  There are two main variants: line and point transects. In both, an observer visits a randomly-located set of transect lines or points and records the distance, $y$, from the transect to each object of interest (i.e., animals or plants of the target species) that is detected within some truncation distance $w$ (after which no observation is recorded; truncation may chosen after the survey has taken place , see Buckland et al \cite{Buckland:2001vm} for further discussion).  Not all objects within $w$ are assumed to be detected; instead the observed distances are used to estimate the parameter vector, $\boldsymbol{\theta}$, of a detection function model, $g(y;\boldsymbol{\theta})$, which describes how the probability of detection declines with increasing distance.  An assumption of the conventional method is that $g(0;\boldsymbol{\theta})=1$. Given an estimate of $\boldsymbol{\theta}$, it is straightforward to estimate population size or density (see below).
 
 A key part of distance sampling, therefore, is specification of the detection function model. Buckland et al. (Chapter 2) \cite{Buckland:2001vm} provide a set of criteria for judging the utility of candidate model classes. Detection function models should be:
 \begin{enumerate}
@@ -99,9 +99,9 @@ The resulting detection functions are capable of being flat at zero distance and
 
 A constrained optimisation solution presents a number of problems. First, constrained maximization is a more complex optimization problem than unconstrained maximization; this means that in practice optimization algorithms may fail to find the constrained maximum.  Second, constrained maximum likelihood estimates do not have the same appealing properties as their unconstrained relatives -- for example the usual estimator of the standard error of the parameters (square root of the inverse of the information matrix) can be biased.  Third, constraints can only be applied at a finite number of points ($M=10$ is used in Distance and $M=20$ in mrds by default), which can lead to the constraint points missing non-monotonic parts of the function. Though increasing the number of points is an option, this incurs additional computational cost. An example of constrained maximisation failing is shown in the left panel of Figure \ref{fig1}. Finally, it is not clear how to implement the constraints in the case where there are additional covariates, particularly continuous covariates. One computationally expensive option would be to apply the constraints at every observed covariate combination (at present both Distance and mrds use unconstrained optimization when additional covariates are in the model). The central and right panels of Figure \ref{fig1} from Pike et al. \cite{Pike:2003ug} show an example of covariate models fitted using unconstrained optimisation: a strongly non-monotonic function has been fitted for some covariate values. Detection probability estimates outside the range $[0,1]$ are sometimes encountered during maximization when models include covariates. Given the above issues, it seems appealing to use a formulation that guarantees monotonicity from the outset.
 
-Mixture models have been applied in the capture-recapture literature \cite{Pledger:2000tc, Dorazio:2003uf, Pledger:2005wy, Morgan:2008wy}. The main utility of mixture models in capture-recapture is in better accounting for between-individual heterogeneity, which can cause severe bias if unmodelled \cite{Link:2003wo}. Unmodelled heterogeneity is not generally considered an issue in distance sampling, provided that detection at zero distance is certain, heterogeneity is not extreme and a flexible detection function model is used \cite[Section 11.12]{Buckland:2004ts}. Finite mixture models offer the potential for flexible modelling since the individual parts of the mixture model (the \textit{mixture components}) can be combined to obtain flexible detection functions, and provided each component is monotonic non-increasing, the resulting combination will also be monotonic non-increasing. In addition, mixture models are potentially well suited to deal with highly heterogeneous detection probabilities, where some part of the population is only observable at close distances while others are readily detected almost regardless of distance (for example bird species where males are more vocal than females). Such a situation results in a ``spiked'' detection function with a long flat tail -- Figure \ref{fig1} shows relatively mild examples. In a mixture model, different parts of the sample could be represented by different components, providing a good fit to spiked data and an appealing conceptual explanation for the underlying data.
+Mixture models have been applied in the capture-recapture literature \cite{Pledger:2000tc, Dorazio:2003uf, Pledger:2005wy, Morgan:2008wy}. The main utility of mixture models in capture-recapture is in better accounting for between-individual heterogeneity, which can cause severe bias if unmodelled \cite{Link:2003wo}. Unmodelled heterogeneity is not generally considered an issue in distance sampling, provided that detection at zero distance is certain, heterogeneity is not extreme and a flexible detection function model is used \cite[Section 11.12]{Buckland:2004ts}. Mixture models come in two variations: finite (consisting of discrete components) and continuous (infinitely many components, amounting to an integral with a weight function); we consider only finite mixtures here (see Discussion for further elaboration). Finite mixture models offer the potential for flexible modelling since the individual parts of the mixture model (the \textit{mixture components}) can be combined to obtain flexible detection functions, and provided each component is monotonic non-increasing, the resulting combination will also be monotonic non-increasing. In addition, mixture models are potentially well suited to deal with highly heterogeneous detection probabilities, where some part of the population is only observable at close distances while others are readily detected almost regardless of distance (for example bird species where males are more vocal than females). Such a situation results in a ``spiked'' detection function with a long flat tail -- Figure \ref{fig1} shows relatively mild examples. In a mixture model, different parts of the sample could be represented by different components, providing a good fit to spiked data and an appealing conceptual explanation for the underlying data.
 
-Here we introduce a new class of distance sampling detection function models, based on mixtures of simple parametric key functions.  In the next section, we describe the models.  We then illustrate their use and explore their performance by applying them to simulated data, and to real data from a number of studies. We also compare results with those obtained from the current standard K+A approach, and by using a combined approach where both the mixtures and K+A models are fitted and a final model selected using AIC. An R package, mmds \cite{mmds} (Mixture Model Distance Sampling), implementing the methods is available from CRAN.
+Here we introduce a new class of distance sampling detection function models, based on mixtures of simple parametric key functions. In the next section, we describe the models. We then illustrate their use and explore their performance. First we investigate performance in terms of the accuracy of estimation of the average probability of detection when data are simulated from a variety of situations. We then go on to investigate survey data from a number of studies that are potentially problematic. We compare results from mixture models with those obtained from the current standard K+A approach, and by using a combined approach where both the mixtures and K+A models are fitted and a final model selected using AIC. An R package, mmds \cite{mmds} (Mixture Model Distance Sampling), implementing the methods is available from CRAN.
 
 \section*{Methods}
 
@@ -111,7 +111,7 @@ Denoting the detection function as $g$, we consider a sum of $J$ mixture compone
 \begin{equation*}
 g(y,\mathbf{z}; \boldsymbol{\theta}, \boldsymbol{\phi}) = \sum_{j=1}^J \phi_j g_j(y,\mathbf{z}; \boldsymbol{\theta}_j),
 \end{equation*}
-where $\sum_{j=1}^J \phi_j = 1$. The distance is denoted $y$, the $\boldsymbol{\theta}_j$s are vectors of parameters for function $g_j$, $\boldsymbol{\theta}$ is a vector of all of the $\boldsymbol{\theta}_j$s, $\boldsymbol{\phi}$ is a $J$-vector of all of the $\phi_j$s, and $\mathbf{z}$ is a $K$-vector of the associated covariates.  
+where $\sum_{j=1}^J \phi_j = 1$. The distance is denoted $y$, the $\boldsymbol{\theta}_j$s are vectors of parameters for function $g_j$, $\boldsymbol{\theta}$ is a vector of all of the $\boldsymbol{\theta}_j$s, $\boldsymbol{\phi}$ is a $J$-vector (i.e., vector of length $J$) of all of the $\phi_j$s, and $\mathbf{z}$ is a $K$-vector of the associated covariates.  
 
 Although other monotonic functions such as hazard-rate could be chosen, and the $g_j$s need not all have the same form, here we let the $g_j$s be half-normal functions:
 \begin{equation*}
@@ -180,24 +180,25 @@ Estimators for the variances of $\hat{N}$ and $\hat{P_a}$ are given in Text S2.
 
 \subsection*{Examples}
 
-\textbf{Simulated data.} Extensive simulations were carried out to investigate performance (in terms of the accuracy of estimation of $P_a$) when the true detection function model is not known to the estimation procedure. 
- Buckland et al. \cite{Buckland:2001vm} show that accurate results are readily obtained in situations where there is a wide ``shoulder'' of high detection probability at small and medium distances: in such situations, the dependence on having a good detection function model is only slight.  Hence, we focus here on a variety of more challenging scenarios.
+\textbf{Simulated data.} We wish to ensure that the class of models we propose can be applied to a wide variety of situations that may arise. Extensive simulations were therefore carried out to investigate performance (in terms of the accuracy of estimation of $P_a$) when the true detection function model is not known to the estimation procedure. The average detection probability, $P_a$, is related to the estimated abundance as seen above and is easily calculated as a simple statistic to summarise and compare the fitted models.
+
+Buckland et al. \cite{Buckland:2001vm} show that accurate results are readily obtained in situations where there is a wide ``shoulder'' of high detection probability at small and medium distances: in such situations, the dependence on having a good detection function model is only slight.  Hence, we focus here on a variety of more challenging scenarios. We generated data from commonly used detection function models (half-normal and hazard-rate \cite{Buckland:2001vm}, as well as exponential power series \cite{Otto:1990kk}), though with parameters that lead to more challenging estimation problems.
 
 Each simulation involved generating 200 replicate datasets from a specified detection function model (assuming the entire study area was included within the surveyed transects, i.e., $A=a$ in equation (\ref{e:popsize}), and a truncation distance of $w=1$), fitting each dataset with a range of mixture and key series plus series adjustment (K+A) models, and in each case recording estimated parameter values and abundance from the model with the lowest AIC in each of: mixture models, K+A models, and both combined.  Mixture models with 1-, 2-, and 3-point half-normal components were fitted to the data along with two K+A models: half-normal plus cosine adjustments and hazard rate plus simple polynomial adjustments, both with monotonicity constraints implemented as described above and with a maximum of 3 adjustments. Mixture models and K+A models were fitted using the R packages mmds (version 1.1) and Distance \cite{Distance} (a simplified interface to mrds; version 0.6.1) respectively, both written by the authors.
 
 Fourteen different simulation scenarios were investigated, in five groups, as described below and illustrated in Figure \ref{sim-detfcts}, one line per group. True parameter values and summary statistics are given in Appendix S2.  For each scenario, a simulation was performed at each of five sample sizes (number of observations, $n$): 30 (low), 60 (recommended minimum for line transects \cite{Buckland:2001vm}), 120 (adequate), 480 (large) and 960 (very large).  We anticipated performance would depend upon sample size, because: the methods are likelihood-based and hence only asymptotically unbiased even if the correct model is fitted; the use of AIC to select model complexity meant that more flexible (and hence accurate) models could be expected to be selected given larger sample sizes. Mixture models are ``parameter hungry'' compared with K+A models, in the sense that each additional mixture component requires 2 extra parameters, while each additional adjustment term requires only one and hence, given the use of AIC for model selection, the relative performance of the two approaches may change at different sample sizes. 
 
-\textit{Group A. Line transect with 2-point half-normal mixture detection functions.} Four scenarios were tested, representing a range of potentially challenging detection functions.  Scenarios A1 and A2 both have mixture components with quite different scale parameters, but in A1 the majority of data come from the less detectable component while in A2 it comes from the more detectable component.  A3 tests the behaviour of the models when the scale parameter of one of the mixture components is very large relative to the truncation distance. A4 has a large spike (i.e., a sharp decline in detectability at small distances), which is similar to some of the data we analyse in the case studies, below.
+\textit{Group A. Line transect with 2-point half-normal mixture detection functions.} Four scenarios were tested, representing a range of potentially challenging detection functions.  Scenarios A1 and A2 both have mixture components with quite different scale parameters, but in A1 the majority of data come from the less detectable component while in A2 it comes from the more detectable component.  A3 tests the behaviour of the models when the scale parameter of one of the mixture components is very large relative to the truncation distance. One component of A4 is a large spike (i.e., a sharp decline in detectability at small distances) in comparison to the other component leading to high heterogeneity in detection probability, which is similar to some of the data we analyse in the case studies, below.
 
 \textit{Group B. Point transect with detection functions as in the previous scenario.} The geometry of point transect sampling means there are few animals close to the point relative to those at larger distances. Hence, for a given sample size of observations, there are far fewer at small distances than for line transects, making it harder to accurately model the detection function in the critical region close to the point.  We therefore anticipate that performance will be worse for point transects. For this group, Figure \ref{sim-detfcts} shows pdfs of the observed distances.
 
-\textit{Group C. Line transect with 3-point half-normal detection functions.} Two scenarios were tested. C1 has a detection function much like A2, enabling us to investigate the efficacy of model selection (i.e., we expect a 2-point mixture to be selected and to produce good results). C2 is a more complex shape that could only be created using a 3-point mixture; it has the added complication (as with A3) that one of the components has a large scale parameter relative to truncation distance.
+\textit{Group C. Line transect with 3-point half-normal detection functions.} Two scenarios were tested. C1 has a detection function much like A2, enabling us to investigate the efficacy of model selection (i.e., we expect a 2-point mixture to be selected and to produce good results). C2 is a more complex shape that could only be created using a 3-point mixture; in particular (as with A3), one of the components has a large scale parameter relative to the truncation distance.
 
 \textit{Group D. Line transect with 2-point half-normal detection functions, and additional covariates.}  We used covariate models to test two aspects of model robustness. In the first, we assumed the covariate values were observed, and included covariate models in the candidate set, along with distance-only models. Our prediction was that (at large sample sizes at least) covariate models would be selected and estimation of $P_a$ unbiased.  In the second, we assumed the covariate values were not observed, and hence covariate models were not in the candidate set.  Our expectation was that (at larger sample sizes) more complex mixture distributions would be selected to compensate for the additional unobserved complexity, and that estimation of $P_a$ would not be greatly affected.  Two scenarios were tested.  D1 had a binary factor covariate, with half the observations having one covariate value and half the other.  D2 had a continuous covariate, whose fixed values were generated from a standard normal distribution function.  Detection functions are shown in the fourth row of Figure \ref{sim-detfcts}, along with the marginal detection functions for the levels/quartiles of the covariates. Note that, for the unobserved covariate models, D1 is equivalent to a 4-point mixture, while D2 is equivalent to a 2-point continuous mixture; neither of these models were in the candidate model set.  In the case of the K+A models, and in line with common practice, if covariates were included in the models then adjustment terms were not.
 
 \textit{Group E. Line transect with other detection functions.} The above models all use the same functional form for $g_j$ in generation and fitting.  Here we tested the model robustness using two alternative data generating functions, not in the candidate model set (see Appendix S2 for formulation).  E1 used an exponential power series function (a generalization of the half-normal function with an additional shape parameter); E2 used a mixture of two hazard-rate functions, giving a shape that may be difficult to fit with half-normal models.
 
-\textbf{Case studies.} The first two case studies return to the datasets depicted in Figure \ref{fig1}, and demonstrate how the mixture formulation solves the issue of non-monotonic detection functions.  The first case study also includes two other species, illustrating how the new approach can fit real data as well as, or better than, the K+A approach. The second case study gives an example of when covariate models can cause non-monotonicity.  The third case study demonstrates modelling of spiked line transect data, while the fourth gives a point transect example, with covariates.
+\textbf{Case studies.} The first two case studies return to the datasets depicted in Figure \ref{fig1}. The left panel of Figure \ref{fig1} show clear non-monotonicity, which we wish to address with our mixture detection functions. This first case study also includes two other species, illustrating how the new approach can fit survey data as well as, or better than, the K+A approach when there are not issues of monotonicity. In the second case study covariates cause the non-monotonicity (seen in the right panel of Figure \ref{fig1}), which we can also address within our mixture model framework.  The third case study demonstrates modelling of spiked line transect data (of wood ants), for which the mixtures may yield more flexible models than K+A methods. Finally, the fourth example is a large point transect dataset (of Hawaiian amakihi), which include covariates.
 
 \textbf{Case study: British Columbia marine mammals.} Williams and Thomas \cite{Williams:2007tc} used a data from a line transect survey to study several species of marine mammal off the coast of British Columbia, Canada. Here, we investigate three species: harbour seal (\textit{Phoca vitulina}) in water (the data also contained observations of hauled-out animals, which were not analysed here), harbour porpoise (\textit{Phocoena phocoena}) and humpback whale (\textit{Megaptera novaeangliae}). Truncation distances were set at 500m, 500m and 2000m for each species respectively, giving sample sizes of 232, 59, and 70 observations. 
 
@@ -240,9 +241,9 @@ The Group E results were encouraging.  Although the mixture formulation was bias
 
 \section*{Discussion}
 
-We have investigated and demonstrated the utility of detection functions constructed from mixtures of half-normal functions in both line and point transect distance sampling. We also show that covariates can be readily included in such models. Further, these mixture detection functions can be simply ``dropped into'' other extensions of conventional distance sampling such as: methods for dealing with incomplete detection at zero distance \cite{Laake:2004tz, Laake:2011vm} (for these models, there is an additional mark-recapture component to the likelihood, where mixture models could also be used, as in \cite{Pledger:2000tc, Dorazio:2003uf, Pledger:2005wy, Morgan:2008wy}), spatial models for distance sampling data \cite{Hedley:2004et, Miller:2013us} or models for surveys where distances were measured with error \cite{Borchers:2010bq}.
+We have investigated and demonstrated the utility of detection functions constructed from mixtures of half-normal functions in both line and point transect distance sampling. We also show that covariates can be readily included in such models. Further, these mixture detection functions can be simply ``dropped into'' other extensions of conventional distance sampling such as: methods for dealing with incomplete detection at zero distance \cite{Laake:2004tz, Laake:2011vm} (for these models, there is an additional mark-recapture component to the likelihood, where mixture models could also be used, as in \cite{Pledger:2000tc, Dorazio:2003uf, Pledger:2005wy, Morgan:2008wy}), spatial models for distance sampling data \cite{Hedley:2004et, Miller:2013us} or models for surveys where distances were measured with error \cite{Borchers:2010bq}.  Though we were necessarily limited to only a few example data sets on specific taxa, we note that there is no limitation to the species or survey setup that mixture model detection functions can be used with.
 
-We have shown that the mixture models perform well on both simulated and real data where traditional methods produce suboptimal results. In many cases the proposed model outperformed K+A models in AIC terms, which is surprising given that the mixture models in question often had more parameters. In particular mixture model detection functions appear useful when dealing with line transect data that has a spike in detection probability at small distances, though we note that it is better to avoid collecting such data in the first place, where possible \cite[, p. 42]{Buckland:2001vm}.  Also, other non-detection-related factors can cause a spike, such as rounding of measurements or responsive animal movement, and if present in the data these should be dealt with using other analysis strategies or field methods \cite{Buckland:2001vm}.  For line transect surveys, unbiased estimation of $P_a$ was possible even for very spiked detection functions, so long as the sample size of observations was large (Scenarios A2 and A4).  By contrast, estimates remained badly biased at all sample sizes for the equivalent point transect scenarios (B2 and B4). For such surveys, where such a small proportion of the data comes from the closer distances, then perhaps the only effective solution is to constrain the fit, for example using a Bayesian approach with strong priors on the detection function parameters.
+We have shown that the mixture models perform well on both simulated and survey data where traditional methods produce suboptimal results. In many cases the proposed model outperformed K+A models in AIC terms, which is surprising given that the mixture models in question often had more parameters. In particular mixture model detection functions appear useful when dealing with line transect data that has a spike in detection probability at small distances, though we note that it is better to avoid collecting such data in the first place, where possible \cite[, p. 42]{Buckland:2001vm} (spikes are commonly caused by observers spending too much effort near the trackline/point and not looking further afield).  Also, other non-detection-related factors can cause a spike, such as rounding of measurements or responsive animal movement, and if present in the data these should be dealt with using other analysis strategies or field methods \cite{Buckland:2001vm}.  For line transect surveys, unbiased estimation of $P_a$ was possible even for very spiked detection functions, so long as the sample size of observations was large (Scenarios A2 and A4).  By contrast, estimates remained badly biased at all sample sizes for the equivalent point transect scenarios (B2 and B4). For such surveys, where such a small proportion of the data comes from the closer distances, then perhaps the only effective solution is to constrain the fit, for example using a Bayesian approach with strong priors on the detection function parameters.
 
 We note that in our case studies, a larger coefficient of variation in the average detectability was reported with mixtures than with half-normal K+A models but mixtures seemed to have lower CVs (again, of $\hat{P_a}$) than hazard-rate K+A models (in the line transect case, ignoring non-monotonic K+A models; see Table \ref{williams-pike-table}). This can be explained by considering the flexibility of the detection function. A half-normal detection function is relatively inflexible so uncertainty is low (since there is only one parameter and it only affects the scale of the function). However, for a hazard-rate model the shoulder can vary from very small (spiked) to very large (depending on the shape parameter), so the uncertainty in this more flexible model is larger. Mixtures of half-normals lie somewhere in between these two options (only the scales change which are weighted, we are then summing smaller variances). 
 
